[package]
name = "WinProcTool"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.48", features = ["Win32_Foundation", "Win32_System_Threading", "Win32_Security"] }
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
log = "0.4"
env_logger = "0.10"
